...
    var body: some View {
        List {
            NameSection(name: $name, color: color, symbol: symbol)
            ColorPickerSection(selection: $color)
            SymbolPickerSection(selection: $symbol)
        }
        .accessibilityIdentifier("link-list-info.container")
        .toolbar {
            ToolbarItem(placement: .cancellationAction) {
                Button(role: .cancel) {
                    cancelAction()
                } label: {
                    if #available(iOS 26, *) {
...
                        saveAction()
                    } label: {
                        Label(L10n.Shared.Button.Done.label, systemSymbol: .checkmark)
                    }
                    .accessibilityLabel(L10n.Shared.Button.Done.Accessibility.label)
                    .accessibilityHint(L10n.Shared.Button.Done.Accessibility.hint)
                    .accessibilityIdentifier("link-list-info.save-button")
                }
            } else {
                ToolbarItem(placement: .topBarTrailing) {
                    Button {
                        saveAction()
                    } label: {
...
